fixing the jumping issue!!!

--- a/css/style.css
+++ b/css/style.css
@@ -32,12 +32,12 @@ ul.social-icons {
   text-decoration: none;
 }
 .footer-social-icons2 {width: 350px;display:block;margin: -104px auto;position: relative;right: 10px;z-index: 100;}
-.social-icon2 {color: #fff;}ul.social-icons2 { position: absolute;bottom: 148PX;right: 136.8%;font-size: 17px;}.social-icons2 li { vertical-align: top;list-style: none;}.social-icons2 a {color: #fff; text-decoration: none;}
+.social-icon2 {color: #fff;}ul.social-icons2 { position: absolute;bottom: 147.6PX;right: 136.8%;font-size: 17px;}.social-icons2 li { vertical-align: top;list-style: none;}.social-icons2 a {color: #fff; text-decoration: none;}
 .footer-social-icons3 {width: 350px;display:block;margin: -104px auto;position: relative;right: 10px;z-index: 100;}
 .social-icon3 {color: #fff;}ul.social-icons3 { position: absolute;bottom: 137PX;right: 137%;font-size: 17px;}.social-icons3 li { vertical-align: top;list-style: none;}.social-icons3 a {color: #fff; text-decoration: none;}
 
 .fa-facebook {
-  padding:10px 14px 6px 14px;
+  padding:10px 14px 6px 14.3px;
   -o-transition:.5s;
   -ms-transition:.5s;
   -moz-transition:.5s;
@@ -61,7 +61,7 @@ ul.social-icons {
   background-color: #b30086;
 }
 .fa-twitter {
-  padding:10px 9px 7px 11px;
+  padding:10px 9px 8px 10.6px;
   -o-transition:.5s;
   -ms-transition:.5s;
   -moz-transition:.5s;
@@ -288,7 +288,7 @@ body {
   display:block;
   margin: 0 auto;
   position: fixed;
-  right: 10px;
+  right: 0px;
   z-index: 100;
 }
 .social-icon {
@@ -297,7 +297,7 @@ body {
 ul.social-icons { 
   position: fixed;
   top:80px;
-  right: 0px;
+  right: 0;
   font-size: 17px
 }
 .navbar-brand>img {
@@ -434,7 +434,7 @@ img {
 .contact-text {
   font-family: 'Open Sans', sans-serif;
   position: absolute;
-  font-size: 30px;
+  font-size: 23px;
   color: #000000;
   top: 20%;
   width: 100%;
@@ -443,7 +443,7 @@ img {
 }
 .contact-text-bold {
   font-style: none;
-  font-size: 30px;
+  font-size: 23px;
   font-weight: 900;
 }
 audio{
